CVS-20090925
+ [APOT] more fixes for EAM
+ [APOT] fix spline calculation
+ minor code cleanups
+ [APOT] fix range for embedding function in plot files
+ [APOT] fix mpi with new grad function

CVS-20090912
+ fix compilation without EAM
+ [APOT] be quiet about compnodes if no cn is found in potential file
+ [APOT] improve cp_ and cn output in potential files
+ [APOT] read arbitrary lines of comments
+ [APOT] write cutoff function to potential file
+ temporary fix for spline extrapolation
+ [APOT] fix invstep for potentials
+ [APOT] fix next severe eam bug, how could this ever work?

CVS-20090902
+ [APOT] clean up internal punishments
+ pointers to important positions in force-vector added
+ improved output of punishment constraints
+ [apot] fix eopp parameter check

CVS-20090831
+ print error messages to stderr (setup)

CVS-20090819
+ [APOT] fix severe _sc bug
+ [APOT] override manual input for embedding function cutoff
+ be more precise about unexpected end of files
+ [APOT] fix _sc detection
+ [APOT] adjust imd-output to new cutoff

CVS-20090717
+ code cleanup in forces.c
+ add punishments to force-array for powell_lsq

CVS-20090706
+ potfit writes the #C line also for potentials of format 3+4
+ fix element detection for configurations containing only 1 element
+ more fixes for element and configuratiion mismatch detection
+ removed code for increased cutoff completely, cubic cutoff function always cuts at rcut
+ [APOT] fix punishment for "universal"

CVS-20090616
+ new build target FORCES - prints out every force calculated, so be very careful about
  logging, only recommended for runs without optimization
  (FORCES is only active in combination with DEBUG)
+ [APOT] added new potential and some tweaks for optimizaion
+ added some units to the rms error
+ potfit no longer reads and prints configuration names
+ new script available: list_config.sh - reads vasp2force comments from force files
  and displays them with the corresponding potential number